test/types/enum/operations/comparisons/enumComparisonsMixed.good
enumComparisonsMixed.chpl:4: error: Comparisons between mixed enumerated types not supported by default
enumComparisonsMixed.chpl:5: error: Comparisons between mixed enumerated types not supported by default
enumComparisonsMixed.chpl:6: error: Comparisons between mixed enumerated types not supported by default
enumComparisonsMixed.chpl:7: error: Comparisons between mixed enumerated types not supported by default
enumComparisonsMixed.chpl:8: error: Comparisons between mixed enumerated types not supported by default
enumComparisonsMixed.chpl:9: error: Comparisons between mixed enumerated types not supported by default
